--- a/src/TrackProgress/View/LibraryView.form
+++ b/src/TrackProgress/View/LibraryView.form
@@ -37,14 +37,6 @@
         </constraints>
         <properties/>
       </component>
-      <component id="ecc5a" class="javax.swing.JTextArea" binding="wantToReadTextArea">
-        <constraints>
-          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="50"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="9b68d" class="javax.swing.JLabel" binding="libraryTitleLabel">
         <constraints>
           <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -60,6 +52,30 @@
         <properties>
           <text value="Add a Book?"/>
         </properties>
+      </component>
+      <component id="4ab83" class="javax.swing.JButton" binding="updateBookButton" default-binding="true">
+        <constraints>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Update Book"/>
+        </properties>
+      </component>
+      <component id="85868" class="javax.swing.JButton" binding="deleteBookButton" default-binding="true">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Delete Book"/>
+        </properties>
+      </component>
+      <component id="7cb44" class="javax.swing.JList" binding="readingList">
+        <constraints>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="150" height="50"/>
+          </grid>
+        </constraints>
+        <properties/>
       </component>
     </children>
   </grid>
